--- a/Kserve_make_mar_file/cross_efficient_vit_mar/config.properties
+++ b/Kserve_make_mar_file/cross_efficient_vit_mar/config.properties
@@ -5,4 +5,4 @@ enable_envvars_config=true
 model_store=/mnt/models/model-store
 install_py_dep_per_model=true
 load_models=all
-model_snapshot={"name": "startup.cfg", "modelCount": 1, "models": {"efficient": {"1.0": {"defaultVersion": true, "marName": "cross_efficient.mar", "minWorkers": 1, "maxWorkers": 7, "batchSize": 4, "maxBatchDelay": 100, "responseTimeout": 120}}}}
+model_snapshot={"name": "startup.cfg", "modelCount": 1, "models": {"cross_efficient": {"1.0": {"defaultVersion": true, "marName": "cross_efficient.mar", "minWorkers": 1, "maxWorkers": 7, "batchSize": 4, "maxBatchDelay": 100, "responseTimeout": 120}}}}
