--- a/deepfake-api-spring-server/build.gradle
+++ b/deepfake-api-spring-server/build.gradle
@@ -22,6 +22,7 @@ dependencies {
 	implementation 'org.jcodec:jcodec-javase:0.2.3'
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 	implementation 'org.apache.commons:commons-exec:1.3'
+	implementation 'com.drewnoakes:metadata-extractor:2.12.0'
 
 	implementation 'org.apache.httpcomponents:httpclient:4.5'
 	implementation 'com.google.code.gson:gson:2.8.5'
